--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Austin Hoag</h1>
-      <h2 class="project-tagline">Physics PhD Student at University of California, Davis\ntest</h2>
+      <h2 class="project-tagline">Physics PhD Student at University of California, Davis</h2>
     </section>
 
     <section class="main-content">
