--- a/Research.html
+++ b/Research.html
@@ -20,7 +20,8 @@
 <a id="About-me" class="anchor" href="#About-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About me.</h3>
 
 <p> I am a fourth year Physics PhD student at the
-            University of California, Davis. I am part of Maruša Bradač's research group. See my <a
+            University of California, Davis. I am part of <a
+            href="bradac.physics.ucdavis.edu"> <b>Prof. Maruša Bradač's</b> </a>  research group. See my <a
             href="Research.html"> <b>research</b> </a> page for more
             information about my professional activities.</p>
 
