--- a/Research.html
+++ b/Research.html
@@ -19,8 +19,8 @@
       <h3>
 <a id="About-me" class="anchor" href="#About-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About me.</h3>
 
-<p> I am a fourth year Physics PhD student at the University of California, Davis. I work with <a href="http://web.physics.ucsb.edu/~tt/TT_home/Welcome.html">Prof. Tommaso Treu's</a> research group.
-See my <a href="Research.html"> <b>research</b> </a> page for more
+<p> I am a fourth year Physics PhD student at the University of California, Davis. I am part of <a href="http://bradac.physics.ucdavis.edu"> <b>Prof. Maruša Bradač's</b> </a> research group.
+  See my <a href="Research.html"> <b>research</b> </a> page for more
 information about my professional activities.</p>
 
 <h3>
