Update Home and begin research

--- a/Research.html
+++ b/Research.html
@@ -17,21 +17,9 @@
 
     <section class="main-content">
       <h3>
-<a id="About-me" class="anchor" href="#About-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About me.</h3>
+<a id="Cosmic-telescopes" class="anchor" href="#Cosmic-telescopes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cosmic Telescopes</h3>
 
-<p> I am a fourth year Physics PhD student at the University of California, Davis. I am part of <a href="http://bradac.physics.ucdavis.edu"> <b>Prof. Maruša Bradač's</b> </a> research group.
-I use a phenomenon called gravitational lensing to leverage the world's most powerful space and ground-based telescopes to study the first galaxies in the universe.
-See my <a href="Research.html"> <b>research</b> </a> page for more
-information.</p>
 
-<h3>
-<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Information</h3>
-<p>  
-athoag@ucdavis.edu
-Department of Physics
-University of California
-Davis, CA 95616
-</p>
 
       <footer class="site-footer">
 
