--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="main-content">
       <h3>
-<a id="About-me" class="anchor" href="#About-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About me.</h3>
+<a id="About-me" class="anchor" href="#About-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About me</h3>
 
 <p> I am a fourth year Physics PhD student at the University of California, Davis. I am part of <a href="http://bradac.physics.ucdavis.edu"> <b>Prof. Maruša Bradač's</b> </a> research group.
 I use a phenomenon called gravitational lensing to leverage the world's most powerful space and ground-based telescopes to study the first galaxies in the universe.
