--- a/Research.html
+++ b/Research.html
@@ -16,8 +16,10 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="Cosmic-telescopes" class="anchor" href="#Cosmic-telescopes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cosmic Telescopes</h3>
+      
+      <h3 class="anchor"> Research </h3>
+      
+      <h4> <a id="Cosmic-telescopes" class="anchor" href="#Cosmic-telescopes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cosmic Telescopes</h4>
 
 
 
