--- a/Research.html
+++ b/Research.html
@@ -17,7 +17,7 @@
 
     <section class="main-content">
       
-      <h3 class="anchor"> Research </h3>
+      <h3 class="anchor"> <b> Research </b> </h3>
       
       <h4> <a id="Cosmic-telescopes" class="anchor" href="#Cosmic-telescopes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cosmic Telescopes</h4>
 
