--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ See my <a href="Research.html"> <b>research</b> </a> page for more information. 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Information</h3>
 <p>  
-athoag@ucdavis.edu
+athoag@ucdavis.edu </br>
 Department of Physics
 University of California
 Davis, CA 95616
