just using master branch from now on

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <a id="About-me" class="anchor" href="#About-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About me</h3>
 
 <p> I am a fourth year Physics PhD student at the University of California, Davis. I am part of <a href="http://bradac.physics.ucdavis.edu"> <b>Prof. Maruša Bradač's</b> </a> research group.
-I use a phenomenon called gravitational lensing to leverage the world's most powerful space and ground-based telescopes to study the first galaxies in the universe.
-See my <a href="Research.html"> <b>research</b> </a> page for more
-information.</p>
+I use a phenomenon called gravitational lensing to leverage the world's most powerful space and ground-based telescopes to study the first galaxies in the universe. 
+My work was recently featured in a <a href="http://www.keckobservatory.org/recent/entry/faintest_early_universe_galaxy_ever_detected_and_confirmed"> <b> press release </b> </a> from Keck Observatory.
+See my <a href="Research.html"> <b>research</b> </a> page for more information. </p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Information</h3>
 <p>  
-athoag@ucdavis.edu
+athoag@ucdavis.edu </br>
 Department of Physics
 University of California
 Davis, CA 95616
