--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
       <h2 class="project-tagline">Physics PhD Student at University of California, Davis</h2>
     </section>
 
+        <div class="nav">
+<nav>
+  <ul>
+    <li><a href="index.html" id="intro">Home</a></li>
+    <li><a href="about.html" id="abt">About</a></li>
+
+  </ul>
+  </nav>
+</div>
+
     <section class="main-content">
       <h3>
 <a id="About-me" class="anchor" href="#About-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About me</h3>
