--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <div class="nav">
-  <nav>
-  <ul>
-    <li><a href="index.html" id="intro">Home</a></li>
-    <li><a href="about.html" id="abt">About</a></li>
-
-  </ul>
-  </nav>
-</div>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Page 1</a></li>
+      <li><a href="#">Page 2</a></li> 
+      <li><a href="#">Page 3</a></li> 
+    </ul>
+  </div>
+</nav>
   </head>
   <body>
     <section class="page-header">
