--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href=".">Home</a></li> <li><a href="Research.html">Research</a></li> 
-    </ul>
+    <ul class="nav navbar-nav"> <li class="active"><a href=".">Home</a></li> <li><a href="Research.html">Research</a></li>  </ul>
   </div>
 </nav>
   </head>
