move navbar around

--- a/Research.html
+++ b/Research.html
@@ -17,11 +17,13 @@
 
 
     <section class="main-content">
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default"; align="left">
 <div class="container-fluid">
 <div class="navbar-header">
 </div>
-<ul class="nav navbar-nav"> <li class="active"><a href=".">Home</a> <a href="Research.html">Research</a></li>  </ul>
+<ul class="nav navbar-nav"> 
+  <li class="active"><a href=".">Home</a></li> 
+  <li><a href="Research.html">Research</a></li>  </ul>
 </div>
 </nav>   
       
